fix(help): scrollbar doesn't show up in Help pages when content overflows

--- a/src/app/navigation/main-nav/main-nav.component.less
+++ b/src/app/navigation/main-nav/main-nav.component.less
@@ -9,12 +9,13 @@
 
   & > .container-fluid {
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     padding-left: 0;
     padding-right: 0;
 
     div[ng-view] {
       height: 100%;
+      overflow: auto;
       padding-left: @pf-padding;
       padding-right: @pf-padding;
 
